<resources>
    <string name="app_name">InAppSDKTestApp</string>
    <string name="top_banner">Top Banner</string>
    <string name="bottom_banner">Bottom Banner</string>
    <string name="all_banners">All Banners</string>
    <string name="full_screen_banner">Interstitial Banner</string>
    <string name="native_banner">Native Banner</string>
    <string name="page_desc">Google is an American multinational technology company specializing in Internet-related services and products. These include online advertising technologies, search, cloud computing, software, and hardware.  Google was founded in 1996 by Larry Page and Sergey Brin while they were Ph.D. students at Stanford University, in California. Together, they own about 14 percent of its shares and control 56 percent of the stockholder voting power through supervoting stock. They incorporated Google as a privately held company on September 4, 1998. An initial public offering (IPO) took place on August 19, 2004, and Google moved to its new headquarters in Mountain View, California, nicknamed the Googleplex.[6]  In August 2015, Google announced plans to reorganize its various interests as a conglomerate called Alphabet Inc. Google, Alphabet\'s leading subsidiary, will continue to be the umbrella company for Alphabet\'s Internet interests. Upon completion of the restructure, Sundar Pichai became CEO of Google, replacing Larry Page, who became CEO of Alphabet.[7][8][9][10]  Rapid growth since incorporation has triggered a chain of products, acquisitions, and partnerships beyond Google\'s core search engine (Google Search). It offers services designed for work and productivity (Google Docs, Sheets and Slides), email (Gmail/Inbox), scheduling and time management (Google Calendar), cloud storage (Google Drive), social networking (Google+), instant messaging and video chat (Google Allo/Duo/Hangouts), language translation (Google Translate), mapping and turn-by-turn navigation (Google Maps), video sharing (YouTube), notetaking (Google Keep), and photo organizing and editing (Google Photos). The company leads the development of the Android mobile operating system, the Google Chrome web browser, and Chrome OS, a lightweight operating system based on the Chrome browser. Google has moved increasingly into hardware; from 2010 to 2015, it partnered with major electronics manufacturers in the production of its Nexus devices,[11] and in October 2016, it launched multiple hardware products (the Google Pixel smartphone, Home, Wifi, and Daydream View).[12][13][14][15] The new hardware chief, Rick Osterloh, stated: \"a lot of the innovation that we want to do now ends up requiring controlling the end-to-end user experience\".[16]</string>
    <string name="expandable_banner">Expandable Banner</string>
    <string name="video_banner">Video Banner</string>
    <!--<string name="inapp_token">eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJnZXRBZCIsImFwcElkIjoiMTQxIn0.zMZKWOdU7W5k5h9D_iGq86gIZ1Zgj9ZSkc-_lcUk04o</string>-->
    <string name="inapp_token">eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJnZXRBZCIsImFwcElkIjoiMTQzIn0.jL1Rq3bdNWfJ0o5TX7Ux_11Zvpc8SEtRNreJzQXL3gg</string>

</resources>
