<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="inova.lk.com.librarytestapp.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/fullScreenBanner"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/full_screen_banner"/>

        <Button
            android:id="@+id/topBanner"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/top_banner"/>

        <Button
            android:id="@+id/bottomBanner"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/bottom_banner"/>

        <Button
            android:id="@+id/nativeBanner"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/native_banner"/>

        <Button
            android:id="@+id/expandableBanner"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:visibility="gone"
            android:text="@string/expandable_banner"/>

        <Button
            android:id="@+id/videoBanner"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/video_banner"/>

        <Button
            android:id="@+id/allBanners"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:visibility="gone"
            android:text="@string/all_banners"/>
    </LinearLayout>
</ScrollView>
